--- a/app/src/main/res/layout/activity_chords.xml
+++ b/app/src/main/res/layout/activity_chords.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,12 +15,15 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+        android:theme="?attr/actionBarTheme"
+        />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar">
-    </androidx.recyclerview.widget.RecyclerView>
+        <fragment
+            android:id="@+id/fragment_chord_list"
+            android:name="edu.quinnipiac.ser210.assignment2part2piano.ChordListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below = "@id/toolbar">
+        </fragment>
 </RelativeLayout>
+</FrameLayout>
