--- a/app/src/main/res/layout/activity_chords.xml
+++ b/app/src/main/res/layout/activity_chords.xml
@@ -9,21 +9,11 @@
     android:layout_height="match_parent"
     tools:context=".ChordsActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        />
-
         <fragment
             android:id="@+id/fragment_chord_list"
             android:name="edu.quinnipiac.ser210.assignment2part2piano.ChordListFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below = "@id/toolbar">
+            android:layout_height="match_parent">
         </fragment>
 </RelativeLayout>
 </FrameLayout>
